app-in-apps/yaml/n8n/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  labels:
    app: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1000Mi"
              cpu: "1"
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-data
              mountPath: "/home/node/.n8n"
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data-pvc
