app-in-apps/yaml/n8n/service-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-service-ingress
  labels:
    app: n8n
  namespace: n8n
spec:
  selector:
    app: n8n
  ports:
    - name: adminpanel
      port: 5678
      protocol: TCP
      targetPort: 5678
  type: ClusterIP
