app-in-apps/yaml/n8n/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  labels:
    app: n8n
  annotations:
    kubernetes.io/ingress.class: haproxy
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: n8n.nexus-core.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: n8n-service-ingress
                port:
                  name: adminpanel
  tls:
    - hosts:
        - n8n.nexus-core.dev
      secretName: n8n-ingress-secret
